added features for the guest
