# ui-short-link/src/openapi/openapi.json
@@ -174,46 +174,6 @@
       }
     },
     "/links": {
-      "get": {
-        "tags": [
-          "Link"
-        ],
-        "operationId": "findAllLink",
-        "parameters": [
-          {
-            "name": "page",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "type": "integer",
-              "format": "int32",
-              "default": 0
-            }
-          },
-          {
-            "name": "size",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "type": "integer",
-              "format": "int32",
-              "default": 10
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/PageResponseLinkResponse"
-                }
-              }
-            }
-          }
-        }
-      },
       "post": {
         "tags": [
           "Link"
@@ -614,6 +574,48 @@
             "required": true,
             "schema": {
               "$ref": "#/components/schemas/LinkFilter"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PageResponseLinkResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/links/all": {
+      "get": {
+        "tags": [
+          "Link"
+        ],
+        "operationId": "findAllLink",
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 0
+            }
+          },
+          {
+            "name": "size",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 10
             }
           }
         ],
